[tool.poetry]
name = "cryptopriceanalysis"
version = "0.1.0"
description = "A real-time cryptocurrency price monitoring and analysis tool designed to track Ethereum price movements and alert users to significant changes."
authors = ["exetch <gassemark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.0.3"
sqlalchemy = "^2.0.25"
websockets = "^12.0"
python-dotenv = "^1.0.0"
statsmodels = "0.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
